# IMSystem

./: .gitignore  README.md  pom.xml
src/main/java/com/huawei/kunpengimsystem/: KunpengImSystemApplication.java
src/main/java/com/huawei/kunpengimsystem/Cconfig/: CustomHandshakeHandler.java  WebsocketConfig.java
src/main/java/com/huawei/kunpengimsystem/config/: CustomHandshakeHandler.java  WebsocketConfig.java
src/main/java/com/huawei/kunpengimsystem/config/datasource/: ClusterDataSourceConfig.java  MasterDataSourceConfig.java
src/main/java/com/huawei/kunpengimsystem/config/websocket/: CustomHandshakeHandler.java  WebsocketConfig.java
src/main/java/com/huawei/kunpengimsystem/controller/: ChatController.java  LoginController.java  UserController.java
src/main/java/com/huawei/kunpengimsystem/entity/: Attachment.java  Contact.java  Conversation.java  Message.java  Participant.java  User.java  UserContact.java
src/main/java/com/huawei/kunpengimsystem/enums/: ResultEnum.java
src/main/java/com/huawei/kunpengimsystem/mapper/: AttachmentMapper.java  ContactMapper.java  ConversationMapper.java  MessageMapper.java  ParticipantMapper.java  UserContactMapper.java  UserMapper.java
src/main/java/com/huawei/kunpengimsystem/service/: AttachmentService.java  AttachmentServiceImpl.java  ContactService.java  ContactServiceImpl.java  ConversationService.java  ConversationServiceImpl.java  MessageService.java  MessageServiceImpl.java  ParticipantService.java  ParticipantServiceImpl.java  UserContactService.java  UserContactServiceImpl.java  UserService.java  UserServiceImpl.java
src/main/java/com/huawei/kunpengimsystem/utils/: NativeUtil.java  Result.java  ResultUtil.java
src/main/resources/: application.yml
src/main/resources/db/: data.sql  schema.sql
src/main/resources/mappers/: AttachmentMapper.xml  ContactMapper.xml  ConversationMapper.xml  MessageMapper.xml  ParticipantMapper.xml  UserContactMapper.xml  UserMapper.xml
src/main/resources/nativecode/: CMakeLists.txt  FileCrc32.cpp  FileCrc32.h  NativeUtil.java  Sha256.cpp  Sha256.h  com_huawei_kunpengimsystem_utils_NativeUtil.h  solution.cpp
src/main/resources/others/: bigdata.md  index.html  messages.txt  mock.html
src/test/java/com/huawei/kunpengimsystem/: KunpengImSystemApplicationTests.java
(+7 files in other folders)
